Bug 438368 - Dialog Parent effect's darkening area flickers on close
Summary: Dialog Parent effect's darkening area flickers on close
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 5.22.0
Platform: Arch Linux Linux
: VHI normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 438494 438573 438617 438712 438761 438776 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-06-09 21:53 UTC by Albert Astals Cid
Modified: 2021-06-17 13:09 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2021-06-09 21:53:44 UTC
STEPS TO REPRODUCE
1. be on kate
2. open the open file dialog
3. close the file dialog

OBSERVED RESULT
See https://www.youtube.com/watch?v=hWgqvNwJZuU the first time i close the dialog doesn't happen and the second does, on the video is not super obvious but in real life is super annoying :/

EXPECTED RESULT
No flickering

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.22.0
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2+kde

ADDITIONAL INFORMATION
This is on X11
Comment 1 Albert Astals Cid 2021-06-09 21:54:47 UTC
I'm almost sure this is a 5.22 regression, but can't be 100% sure
Comment 2 Albert Astals Cid 2021-06-09 22:04:06 UTC
For completion this is caused by the "Focus" -> "Dialog Parent" desktop effect, not sure if that's kwin or something else in plasma
Comment 3 Nate Graham 2021-06-09 22:22:59 UTC
Can reproduce. Super noticeable.
Comment 4 David Redondo 2021-06-14 08:03:45 UTC
*** Bug 438573 has been marked as a duplicate of this bug. ***
Comment 5 Dimitris Kardarakos 2021-06-14 15:21:39 UTC
*** Bug 438494 has been marked as a duplicate of this bug. ***
Comment 6 Albert Astals Cid 2021-06-14 19:34:56 UTC
*** Bug 438617 has been marked as a duplicate of this bug. ***
Comment 7 Vlad Zahorodnii 2021-06-15 09:01:54 UTC
Git commit 61159d943cfe21492d29c6da05deefa5de21a23c by Vlad Zahorodnii.
Committed on 15/06/2021 at 05:46.
Pushed by davidedmundson into branch 'master'.

effects: Fix interpolated values for redirected animations

If a redirected animation reaches the end, the timeline value will be 0,
i.e. the interpolated() function has to return the from value, not `to`.

M  +1    -5    src/libkwineffects/kwinanimationeffect.cpp

https://invent.kde.org/plasma/kwin/commit/61159d943cfe21492d29c6da05deefa5de21a23c
Comment 8 David Edmundson 2021-06-15 09:02:24 UTC
Git commit d3ae81b236badef07791c3812d06dbad03cb6592 by David Edmundson, on behalf of Vlad Zahorodnii.
Committed on 15/06/2021 at 09:02.
Pushed by davidedmundson into branch 'cherry-pick-61159d94'.

effects: Fix interpolated values for redirected animations

If a redirected animation reaches the end, the timeline value will be 0,
i.e. the interpolated() function has to return the from value, not `to`.


(cherry picked from commit 61159d943cfe21492d29c6da05deefa5de21a23c)

M  +1    -5    src/libkwineffects/kwinanimationeffect.cpp

https://invent.kde.org/plasma/kwin/commit/d3ae81b236badef07791c3812d06dbad03cb6592
Comment 9 Nate Graham 2021-06-15 13:20:02 UTC
Git commit 9169445b9bbb91f27577baf7ecb247c2e31d5b0a by Nate Graham, on behalf of Vlad Zahorodnii.
Committed on 15/06/2021 at 13:19.
Pushed by ngraham into branch 'Plasma/5.22'.

effects: Fix interpolated values for redirected animations

If a redirected animation reaches the end, the timeline value will be 0,
i.e. the interpolated() function has to return the from value, not `to`.


(cherry picked from commit 61159d943cfe21492d29c6da05deefa5de21a23c)

M  +1    -5    src/libkwineffects/kwinanimationeffect.cpp

https://invent.kde.org/plasma/kwin/commit/9169445b9bbb91f27577baf7ecb247c2e31d5b0a
Comment 10 David Redondo 2021-06-16 08:23:24 UTC
*** Bug 438712 has been marked as a duplicate of this bug. ***
Comment 11 Nate Graham 2021-06-16 18:05:05 UTC
*** Bug 438761 has been marked as a duplicate of this bug. ***
Comment 12 Patrick Silva 2021-06-17 13:09:15 UTC
*** Bug 438776 has been marked as a duplicate of this bug. ***